--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cientifico</title>
     <link type="text/css" rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="https://i.imgur.com/YaLjlwM.jpg" type="image/x-icon">
 </head>
 <body>
     <main class="Main">
